--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,11 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+#file upload
+uploads/**
+
+!uploads/
+!uploads/avatar/
+!uploads/default-avatar.png
